# Life-Dashboard

./: .dockerignore  .editorconfig  .env.example  .gitignore  ;  AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile.cloudrun  Makefile  README.md  STYLE_GUIDE.md  apply_speed_improvements.sh  eslint.config.mjs  next.config.mjs  package.json  speed_fixes.py  speed_improvements.sql  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __main__.py  app-readme.md  main.py
backend/app/clients/: clients-readme.md  garmin_client.py  genai_client.py  google_calendar_client.py  openai_client.py  vertex_client.py
backend/app/core/: auth.py  config.py  core-readme.md  crypto.py  exceptions.py  logging.py  quotas.py  security.py
backend/app/db/: db-readme.md  session.py
backend/app/middleware/: cache_headers.py
backend/app/prompts/: __init__.py  llm_prompts.py  nutrition_suggestion_prompt.py
backend/app/routers/: __init__.py  _shared.py  admin.py  ai_digest.py  assistant.py  auth.py  calendar.py  garmin.py  imessage.py  insights.py  (+12 more)
backend/mcp_server/: README.md  __init__.py  models.py  runtime.py  server.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_ai_agents_comprehensive.py  test_ai_digest_llm_service.py  test_ai_digest_service.py  test_auth_router.py  test_calendar_dedupe.py  test_contact_reresolution.py  test_conversation_context.py  test_garmin_crypto.py  test_garmin_optimizations.py  test_imessage_contact_service.py  test_imessage_processing_live.py  test_imessage_processing_service.py  test_imessage_todo_reconciliation_service.py  test_imessage_utils.py  test_insight_service.py  test_journal_repository.py  test_journal_service.py  test_main_startup.py  test_mcp_runtime.py  test_monet_assistant.py  test_monet_nutrition_live.py  test_news_shorten.py  test_nutrition_accuracy.py  test_openai_client.py  test_project_inference_boost.py  test_project_note_repository.py  test_recipe_sanity.py  test_relevancy_and_consolidation.py  test_time_router.py  test_todo_calendar_title_agent.py  test_todo_project_suggestion_service.py  test_todo_repository.py  test_todos_router.py  test_workspace_service.py
(+484 files in other folders)
