[tool.poetry]
name = "life-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the Life Dashboard"
authors = ["Sean May <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = ">=0.31.1,<1.0.0", extras = ["standard"]}
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
alembic = "^1.13.0"
tenacity = "^8.2.0"
garminconnect = "^0.2.7"
apscheduler = "^3.10.4"
redis = "^5.0.0"
httpx = "^0.27.0"
feedparser = "^6.0"
python-dateutil = "^2.9.0"
loguru = "^0.7.2"
google-auth = "^2.41.1"
openai = "^2.26.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.11"
cryptography = "^42.0.0"
email-validator = "^2.1.0"
python-multipart = "^0.0.22"
mcp = "^1.26.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
mypy = "^1.8"
ruff = "^0.4.0"
pytest = "^8.3"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "live_llm: requires OpenAI API key and runs real LLM calls",
  "slow: slow running tests",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
